week4/default/update: API 명세를 활용한 openapi-generator 가 자동 생성해준 controller interface와 httpDto를 /build path로 변경(보여주기 위해 .gitignore에서 /build 주석처리)
